Add Suggestion to CompletionItem converter class